--- a/app/views/App/Index.html
+++ b/app/views/App/Index.html
@@ -1,4 +1,4 @@
-{{set . "title" "Technical Stuff"}}
+{{set . "title" "Home"}}
 {{append . "moreStyles" "/public/css/highlight.css"}}
 {{append . "moreScripts" "//cdnjs.cloudflare.com/ajax/libs/highlight.js/7.3/highlight.min.js"}}
 {{template "header.html" .}}
