--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -26,8 +26,7 @@
 			{{end}} 
 			</div>
 			
-			<em>Copyright 2013 Simon Peter Grätzer</em>
-			<em>Impressum</em>
+			<em>Copyright 2013 (C) Simon Peter Grätzer</em>
 		</footer>
 		
 		</div><!-- /.container -->
