--- a/app/views/Admin/EditUser.html
+++ b/app/views/Admin/EditUser.html
@@ -8,7 +8,7 @@
 
 
 <div class="row">
-	<div class="col-sm-2" style="min-width:160px">
+	<div class="col-sm-2">
 		{{ set . "pp" 4}}
 		{{template "Admin/adminMenu.html" .}}
 	</div>
