--- a/app/views/App/trailer.html
+++ b/app/views/App/trailer.html
@@ -1,6 +1,6 @@
 <header>
 <div class="jumbotron" id="trailer">
-   <h1>Technical Stuff</h1>
-   <p class="lead">Stuff on iOS, Android, GoLang and more.</p>
+   <h1>Technical Notebook</h1>
+   <p class="lead">Thoughts on iOS, Android, GoLang and more.</p>
 </div>
 </header>
