--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">Simon Grätzer</a>
+    <a class="navbar-brand" href="/">Simon's Blog</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
