--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -17,6 +17,10 @@ footer {
 	max-width:100%;
 }
 
+.table tbody > tr > td {
+	vertical-align:middle !important;
+}
+
 #wmd-preview img {
 	max-width:100%;
 }
