--- a/app/views/App/Index.html
+++ b/app/views/App/Index.html
@@ -6,6 +6,7 @@
 
 <div class="row">
 	<div class="col-sm-11">
+	<main>
 	{{$user := .user}}
 	{{range .posts}}
 	<article>
@@ -49,7 +50,8 @@
 			<a href="/?offset={{ sub .offset 5}}">&laquo; Back</a>
 		{{end}}
 	{{end}}
-	</div>
+	</main>
+	</div><!-- ./col-sm-11 -->
 	
 	<div class="col-xs-1">
 	{{template "App/social.html" .}}
