--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -13,7 +13,7 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
-      {{$current := .page}}
+      {{$current := .post}}
 	  {{range .pages}}
 	     <li {{if eq $current.PostId .PostId}}class="active"{{end}}><a href="/post/{{.PostId}}/{{urlquery .Title}}">{{.Title}}</a></li>
 	  {{end}}
