--- a/app/views/debug.html
+++ b/app/views/debug.html
@@ -43,7 +43,7 @@
 </div>
 <a id="toggleSidebar" href="#" class="toggles"><span class="glyphicon glyphicon-arrow-left"></span></a>
 
-<script>
+<script type="text/javascript">
 	$sidebar = 0;
 	$('#toggleSidebar').click(function() {
 		if ($sidebar === 1) {
