--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,4 +1,4 @@
-// Copyrigth Simon Peter Grätzer simon(at)graetzer.org
+/* Copyrigth Simon Peter Grätzer simon(at)graetzer.org */
 
 body {
 	 background:url('../img/cream_pixels.png');
