Reducing number of blocking javascript dependencies

--- a/app/views/debug.html
+++ b/app/views/debug.html
@@ -43,6 +43,7 @@
 </div>
 <a id="toggleSidebar" href="#" class="toggles"><span class="glyphicon glyphicon-arrow-left"></span></a>
 
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script type="text/javascript">
 	$sidebar = 0;
 	$('#toggleSidebar').click(function() {
