--- a/app/views/Admin/EditPost.html
+++ b/app/views/Admin/EditPost.html
@@ -9,9 +9,6 @@
 {{append . "moreScripts" "/public/js/Markdown.Sanitizer.js"}}
 {{append . "moreScripts" "/public/js/Markdown.Editor.js"}}
 
-{{append . "moreStyles" "/public/css/highlight.css"}}
-{{append . "moreScripts" "//cdnjs.cloudflare.com/ajax/libs/highlight.js/7.3/highlight.min.js"}}
-
 {{template "header.html" .}}
 
 
@@ -62,12 +59,14 @@
 </div>
 
 <script type="text/javascript">
-	$(function() {
+	function addEvent(element, event, fn) {
+	    if (element.addEventListener) element.addEventListener(event, fn, false);
+	    else if (element.attachEvent) element.attachEvent('on' + event, fn);
+	}
+	addEvent(window, 'load', function() {
 		var converter = Markdown.getSanitizingConverter();
 		var editor = new Markdown.Editor(converter);
 		editor.hooks.chain("onPreviewRefresh", function() {
-			console.log("the preview has been updated");
-        	// hljs.initHighlighting();
 			$('pre code').each(function(i, e) {hljs.highlightBlock(e)});
     	});
 		editor.run();
