--- a/app/views/Admin/EditUser.html
+++ b/app/views/Admin/EditUser.html
@@ -6,18 +6,20 @@
 
 {{template "header.html" .}}
 
-
+<div class="row">
+	<div class="col-sm-5 col-sm-offset-2">
+		<ol class="breadcrumb">
+		  <li><a href="/admin">Admin Panel</a></li>
+		  <li class="active">{{.title}}</li>
+		</ol>
+	</div>
+</div>
 <div class="row">
 	<div class="col-sm-2">
 		{{ set . "pp" 4}}
 		{{template "Admin/adminMenu.html" .}}
 	</div>
 	<div class="col-sm-5">
-		<ol class="breadcrumb">
-		  <li><a href="/admin">Admin Panel</a></li>
-		  <li class="active">{{.title}}</li>
-		</ol>
-	
 		<h3>User Profile</h3>
 		<form role="form" method="POST" action="/admin/user/save">
 			<div class="form-group">
