--- a/app/views/Admin/EditPost.html
+++ b/app/views/Admin/EditPost.html
@@ -6,23 +6,25 @@
 
 {{append . "moreStyles" "/public/css/Markdown.Editor.css"}}
 {{append . "moreScripts" "/public/js/Markdown.Converter.js"}}
-{{append . "moreScripts" "/public/js/Markdown.Sanitizer.js"}}
+{{/*append . "moreScripts" "/public/js/Markdown.Sanitizer.js"*/}}
 {{append . "moreScripts" "/public/js/Markdown.Editor.js"}}
 
 {{template "header.html" .}}
 
-
+<div class="row">
+	<div class="col-sm-5 col-sm-offset-2">
+		<ol class="breadcrumb">
+		  <li><a href="/admin">Admin Panel</a></li>
+		  <li class="active">{{.title}}</li>
+		</ol>
+	</div>
+</div>
 <div class="row">
 	<div class="col-sm-2">
 		{{ set . "pp" 1}}
 		{{template "Admin/adminMenu.html" .}}
 	</div>
 	<div class="col-sm-5">
-		<ol class="breadcrumb">
-		  <li><a href="/admin">Admin Panel</a></li>
-		  <li class="active">{{.title}}</li>
-		</ol>
-
 		<h3>{{.title}}</h3>
 		<form role="form" method="POST" action="/admin/post/{{.post.PostId}}">
 			<div class="form-group">
@@ -53,7 +55,7 @@
 			<button type="submit" class="btn btn-default">Save</button>
 		</form>
 	</div>
-	<div class="col-xs-5">
+	<div class="col-sm-5">
 		<div id="wmd-preview"></div>
 	</div>
 </div>
@@ -64,7 +66,8 @@
 	    else if (element.attachEvent) element.attachEvent('on' + event, fn);
 	}
 	addEvent(window, 'load', function() {
-		var converter = Markdown.getSanitizingConverter();
+		//var converter = Markdown.getSanitizingConverter();
+		var converter = new Markdown.Converter();
 		var editor = new Markdown.Editor(converter);
 		editor.hooks.chain("onPreviewRefresh", function() {
 			$('pre code').each(function(i, e) {hljs.highlightBlock(e)});
