--- a/app/views/Admin/adminMenu.html
+++ b/app/views/Admin/adminMenu.html
@@ -1,7 +1,7 @@
 <ul class="nav nav-pills nav-stacked">
 
   <li {{if eq .pp 0 }}class="active"{{end}}><a href="/admin"><span class="glyphicon glyphicon-home"></span> Content</a></li>
-  <li {{if eq .pp 2 }}class="active"{{end}}><a href="/admin/uploads"><span class="glyphicon glyphicon-arrow-up"></span> Manage Files</a></li>
+  <li {{if eq .pp 2 }}class="active"{{end}}><a href="/admin/media"><span class="glyphicon glyphicon-arrow-up"></span> Manage Files</a></li>
   <li {{if eq .pp 3 }}class="active"{{end}}><a href="/admin/comments"><span class="glyphicon glyphicon-envelope"></span> Comments <span class="badge">{{commentCount nil}}</span></a></li>
   <li {{if eq .pp 1 }}class="active"{{end}}><a href="/admin/post/create"><span class="glyphicon glyphicon-plus"></span> Create Post</a></li>
   {{if .user.IsAdmin}}
