--- a/app/views/Admin/EditPost.html
+++ b/app/views/Admin/EditPost.html
@@ -4,15 +4,16 @@
 {{set . "title" "Edit Post"}}
 {{end}}
 
-{{append . "moreStyles" "/public/css/Markdown.Editor.css"}}
 {{append . "moreScripts" "/public/js/Markdown.Converter.js"}}
-{{/*append . "moreScripts" "/public/js/Markdown.Sanitizer.js"*/}}
-{{append . "moreScripts" "/public/js/Markdown.Editor.js"}}
+{{append . "moreScripts" "//cdnjs.cloudflare.com/ajax/libs/ace/1.1.01/ace.js"}}
+{{/*append . "moreStyles" "/public/css/Markdown.Editor.css"}}
+{{append . "moreScripts" "/public/js/Markdown.Sanitizer.js"}}
+{{append . "moreScripts" "/public/js/Markdown.Editor.js"*/}}
 
 {{template "header.html" .}}
 
 <div class="row">
-	<div class="col-sm-5 col-sm-offset-2">
+	<div class="col-sm-12">
 		<ol class="breadcrumb">
 		  <li><a href="/admin">Admin Panel</a></li>
 		  <li class="active">{{.title}}</li>
@@ -20,11 +21,11 @@
 	</div>
 </div>
 <div class="row">
-	<div class="col-sm-2">
-		{{ set . "pp" 1}}
+	{{/*<div class="col-sm-2">
+		{{set . "pp" 1}}
 		{{template "Admin/adminMenu.html" .}}
-	</div>
-	<div class="col-sm-5">
+	</div>*/}}
+	<div class="col-sm-6">
 		<h3>{{.title}}</h3>
 		<form role="form" method="POST" action="/admin/post/{{.post.PostId}}">
 			<div class="form-group">
@@ -32,11 +33,9 @@
 				<input type="text" class="form-control" id="inputPostTitle" name="title" placeholder="Titel" value="{{.post.Title}}" />
 			</div>
 			<div class="form-group">
-				<label for="wmd-input">Content</label>
-				<div>
-            		<div id="wmd-button-bar"></div>
-					<textarea class="form-control" rows="20" id="wmd-input" name="body">{{.post.Body}}</textarea>
-				</div>
+				<label for="editorACE">Content</label>
+				<div id="editorACE">{{.post.Body}}</div>
+				<textarea id="editorTextarea" name="body" style="display:none"></textarea>
 			</div>
 			<div class="checkbox">
 				<label>
@@ -55,8 +54,16 @@
 			<button type="submit" class="btn btn-default">Save</button>
 		</form>
 	</div>
-	<div class="col-sm-5">
-		<div id="wmd-preview"></div>
+	<div class="col-sm-6">
+		<div ></div>
+		
+		<div class="panel panel-default">
+		  <div class="panel-heading">
+		    <h2 class="panel-title" id="titlePreview"></h2>
+		  </div>
+		  <div class="panel-body" id="editorPreview">
+		  </div>
+		</div>
 	</div>
 </div>
 
@@ -65,15 +72,26 @@
 	    if (element.addEventListener) element.addEventListener(event, fn, false);
 	    else if (element.attachEvent) element.attachEvent('on' + event, fn);
 	}
+	var editor = ace.edit("editorACE");
+    editor.setTheme("ace/theme/github");
+    editor.getSession().setMode("ace/mode/markdown");
+	
 	addEvent(window, 'load', function() {
-		//var converter = Markdown.getSanitizingConverter();
 		var converter = new Markdown.Converter();
-		var editor = new Markdown.Editor(converter);
-		editor.hooks.chain("onPreviewRefresh", function() {
+		var preview = $("#editorPreview");
+		var textarea = $("#editorTextarea");
+		var update = function () {
+		    textarea.val(editor.getSession().getValue());
+			preview.html(converter.makeHtml(editor.getSession().getValue()));
 			$('pre code').each(function(i, e) {hljs.highlightBlock(e)});
-    	});
-		editor.run();
+		};
+		editor.getSession().on("change", update);
+		update();
+		
+		$("#inputPostTitle").keyup(function(){
+			$("#titlePreview").text($(this).val());
+		});
+		$("#inputPostTitle").keyup();
 	});
 </script>
-
 {{template "footer.html" .}}
