--- a/app/views/App/Post.html
+++ b/app/views/App/Post.html
@@ -52,7 +52,7 @@
 		  <div class="form-group {{if .errors.body}}has-error{{end}}">
 		    <label for="textareaBody">Comment</label>
 			<textarea class="form-control" rows="5" id="textareaBody" name="body">{{.flash.body}}</textarea>
-			<span class="help-block">Required. Max 500 characters. Markdown is supported. Every Post will be checked befor it is shown</span>
+			<span class="help-block">Required. Max 500 characters. Markdown is supported, but no images. Every Post will be checked befor it is shown</span>
 		  </div>
 		
 			<script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k={{recaptchaKey}}">
@@ -84,7 +84,7 @@
 				By {{with .Name}}{{.}}{{else}}Anonymous{{end}}
 			  </div>
 			  <div class="panel-body">
-			    {{markdown .Body}}
+			    {{markdownSave .Body}}
 			  </div>
 			</div>
 		{{end}}
