--- a/app/views/header.html
+++ b/app/views/header.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="A blog on iOS, Android, GoLang, 3D Graphics and similar topics" />
 	
 	<link rel="shortcut icon" type="image/png" href="/public/img/favicon.png" />
+	<link rel="alternate" type="application/rss+xml" title="Feed of Simon's blog" href="/feed.rss" />
 	
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="/public/css/custom.css" />
