--- a/app/views/App/Post.html
+++ b/app/views/App/Post.html
@@ -8,7 +8,7 @@
 	<article>
 		<div class="panel panel-default">
 		  <div class="panel-heading">
-		    <h3 class="panel-title">{{.post.Title}}<small class="pull-right">{{.post.UpdatedTime.Format "Mon Jan 2 15:04:05"}}</small></h3>
+		    <h3 class="panel-title">{{.post.Title}}<small class="pull-right">{{datetime .post.UpdatedTime}}</small></h3>
 			<small>By {{.post.User.Name}}</small>
 			{{if eq .user.UserId .post.AuthorId}}
 				<a href="/admin/post/{{.post.PostId}}" title="Edit this Post">Edit</a>
